--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,28 @@
+anyio==4.4.0
+astrapy==1.4.2
 cassandra-driver==3.29.2
+cassio==0.1.8
 certifi==2024.8.30
 charset-normalizer==3.3.2
 click==8.1.7
+deprecation==2.1.0
 dnspython==2.6.1
 geomet==0.2.1.post1
+h11==0.14.0
+h2==4.1.0
+hpack==4.0.0
+httpcore==1.0.5
+httpx==0.27.2
+hyperframe==6.0.1
 idna==3.9
 mongoengine==0.29.0
+numpy==2.1.1
+packaging==24.1
 pymongo==4.8.0
 python-dotenv==0.13.0
 requests==2.32.3
 six==1.16.0
+sniffio==1.3.1
+toml==0.10.2
 urllib3==2.2.3
+uuid6==2024.7.10
